adds api document routes for create, delete, save, and read. Also adds api documentation to swagger.
